添加观察者模式

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -50,6 +50,11 @@
         "sstream": "cpp",
         "streambuf": "cpp",
         "typeinfo": "cpp",
-        "iomanip": "cpp"
+        "iomanip": "cpp",
+        "condition_variable": "cpp",
+        "csignal": "cpp",
+        "list": "cpp",
+        "mutex": "cpp",
+        "thread": "cpp"
     }
 }
